<resources>
    <string name="app_name">Consensus</string>
    <string name="new_election">New Election</string>
    <string name="consensus_welcome">Welcome to Consensus! A better way to make group decisions.</string>
    <string name="create_candidate_list">Create Candidate List</string>
    <string name="voting_method">Voting Method</string>
    <string name="election_title">Election Title</string>
    <string name="begin_election">Begin Election</string>
    <string name="show_results">Give me the election results</string>
    <string name="new_ballot">I want to vote</string>
    <string name="election_landing_status">No ballots have been cast.</string>
    <string name="results_intro">Here are the results:</string>
    <string name="ballot_info">Rank the following in order of preference. Items may share a number. (1 = Most Preferred)</string>
    <string name="sort_by_rank">Sort by Rank</string>
    <string name="cast_ballot">Cast Ballot</string>
    <string name="election_title_default">Election Title</string>
    <string name="prepare_candidate_list_title">Add Candidates</string>
    <string name="election_setup_title">New Election</string>
    <string name="results_title">Election Results</string>
    <string name="ballot_title">New Ballot</string>
    <string name="no_results">No results to display</string>
</resources>
