<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ballot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.consensus.BallotActivity">

    <TextView
        android:text="@string/ballot_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ballotInfo" />

    <Button
        android:text="@string/sort_by_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sortButton"
        android:layout_below="@+id/ballotInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="sortCandidates" />

    <ListView
        android:id="@+id/candidateList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sortButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cast_ballot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/castBallotButton"
        android:layout_alignBaseline="@+id/sortButton"
        android:layout_alignBottom="@+id/sortButton"
        android:layout_toRightOf="@+id/sortButton"
        android:layout_toEndOf="@+id/sortButton"
        android:onClick="castBallot" />
</RelativeLayout>
