<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_election_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.consensus.ElectionSetupActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/electionTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/election_title" />

    <TextView
        android:text="@string/voting_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/methodSpinnerText"
        android:layout_alignBottom="@+id/methodSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/methodSpinner"
        android:layout_below="@+id/electionTitle"
        android:layout_toRightOf="@+id/methodSpinnerText"
        android:layout_toEndOf="@+id/methodSpinnerText" />

    <Button
        android:text="@string/create_candidate_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/methodSpinnerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/createCandidateListButton" />
</RelativeLayout>
